--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kemel.online</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="">
+    <title>kemel.online</title>
 </head>
 <body>
-    <h1>hola</h1>
-    <h2>un aprendiz del sena paso por aqui</h2>
+   <header>
+    <div class="contenedor">
+        
+    </div>
+
+   </header>
+   <script src="js/firebase.js" type="module"></script>
 </body>
 </html>
