--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
     <title>kemel.online</title>
 </head>
 <body>
-   <header>
-    <div class="contenedor">
-        
-    </div>
-    <div class="tempo">
-        <h1>Proyecto kemel.online</h1>
-        <h2>Cimi</h2>
-        <h3>adso 2824003</h3>
-    </div>
-   </header>
-   <script src="js/firebase.js" type="module"></script>
+   <div class="contenedor">
+        <nav class="barra">
+            <figure class="nav_logo">
+                <img src="" alt="logo">
+            </figure>
+            <label class="nav__toggle">
+                <input type="checkbox" name="nav__input">
+            </label>
+            <ul class="nav_lista">
+                <li class="nav_item"><a href="#"></a></li>
+                <li class="nav_item"><a href="#"></a></li>
+                <li class="nav_item"><a href="#"></a></li>
+                <li class="nav_item"><a href="#"></a></li>
+            </ul>
+        </nav>
+   </div>
 </body>
 </html>
