--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
     <title>kemel.online</title>
 </head>
 <body>
-   <div class="contenedor">
-        <nav class="barra">
-            <figure class="nav_logo">
-                <img src="" alt="logo">
-            </figure>
-            <label class="nav__toggle">
-                <input type="checkbox" name="nav__input">
-            </label>
-            <ul class="nav_lista">
-                <li class="nav_item"><a href="#"></a></li>
-                <li class="nav_item"><a href="#"></a></li>
-                <li class="nav_item"><a href="#"></a></li>
-                <li class="nav_item"><a href="#"></a></li>
-            </ul>
-        </nav>
-   </div>
+  <header>
+    
+  </header>
+  <nav>
+
+  </nav>
+  <section>
+
+  </section>
+  <footer>
+    
+  </footer>
 </body>
 </html>
