--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
     <title>kemel.online</title>
 </head>
 <body>
-  <header>
-    
+  <header class="header">
+    <div class="logo">
+      <ul>
+        <li>
+          <a href="index.html">
+            <img src="" alt="">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="menu">
+      <ul>
+        <li class="item">
+          <a href="index.html">INICIO</a>
+        </li>
+        <li class="item">
+          <a href="catalogo.html">CATALOGO</a>
+        </li>
+        <li class="item">
+          <a href="contacto.html">CONTACTO</a>
+        </li>
+      </ul>
+    </div>
   </header>
-  <nav>
 
-  </nav>
-  <section>
-
-  </section>
-  <footer>
-    
-  </footer>
 </body>
 </html>
