--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="">
-    <title>kemel.online</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="">  <title>kemel.online</title>
 </head>
 <body>
   <header class="header">
@@ -13,8 +12,7 @@
       <ul>
         <li>
           <a href="index.html">
-            <img src="" alt="">
-          </a>
+            <img src="img/LOGO.png" class="logo" alt="Kemel Online Logo">  </a>
         </li>
       </ul>
     </div>
@@ -33,5 +31,23 @@
     </div>
   </header>
 
+  <main class="main">
+    <section class="hero">  <h1>¡Bienvenido a Kemel Online!</h1>
+      <p>Encuentra todo lo que necesitas aquí.</p>
+      <button>Explorar Catálogo</button>
+    </section>
+    
+    <section class="products">  <h2>Productos Destacados</h2>
+      <ul>
+        <li><a href="#">Producto 1</a></li>
+        <li><a href="#">Producto 2</a></li>
+        <li><a href="#">Producto 3</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>Copyright &copy; Kemel Online 2024</p>
+  </footer>
 </body>
 </html>
